[gd_scene load_steps=7 format=2]

[ext_resource path="res://scn_scenes/scn_ObjectBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_1/scr_obj_Clock.gd" type="Script" id=2]
[ext_resource path="res://levels/level_1/scn_obj_ThisIsNotAShrimp.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx_audio/f0_sfx_pianochimes/sfx_pianochime_02_jazzy.wav" type="AudioStream" id=4]
[ext_resource path="res://levels/level_1/f0_sfx_lv01/sfx_clockD_2.ogg" type="AudioStream" id=5]
[ext_resource path="res://levels/level_1/f0_sfx_lv01/sfx_clockN.ogg" type="AudioStream" id=6]

[node name="obj_Clock" instance=ExtResource( 1 )]
script = ExtResource( 2 )
default_noise = ""
distorted_noise_player_active = true

[node name="sfx2D_object" parent="." index="1"]
stream = ExtResource( 6 )

[node name="sfx2D_distorted" parent="." index="2"]
stream = ExtResource( 5 )

[node name="sfx_discovered" parent="." index="3"]
stream = ExtResource( 4 )
volume_db = 7.068

[node name="AnimatedSprite" parent="." index="5"]
modulate = Color( 0.717647, 0.298039, 0.423529, 1 )
animation = "wolf_clock"

[node name="ClockHand" parent="." index="8" instance=ExtResource( 3 )]
position = Vector2( 5.06149, -18.4109 )
scale = Vector2( 0.5, 0.5 )
